k8s-atifacts/mi/mi-management-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    meta.helm.sh/release-name: apim4
    meta.helm.sh/release-namespace: apim-demo
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
  creationTimestamp: "2021-05-31T21:54:22Z"
  generation: 1
  labels:
    app.kubernetes.io/managed-by: Helm
  name: wso2am-pattern-1-mi-1-management-ingress
  namespace: apim-demo
  resourceVersion: "65798338"
  uid: 7173fe41-679c-491c-8b4a-809f9a66c273
spec:
  rules:
  - host: management.mi.wso2.com
    http:
      paths:
      - backend:
          service:
            name: wso2am-pattern-1-mi-1-service
            port:
              number: 9164
        path: /
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - management.mi.wso2.com
status:
  loadBalancer:
    ingress:
    - ip: 34.123.88.118
